--- a/#IntegrationLayer/_#IntegrationLayer.csproj
+++ b/#IntegrationLayer/_#IntegrationLayer.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\##Cross-cutting Concerns\_##Cross-cutting Concerns.csproj" />
     <ProjectReference Include="..\DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
+    <ProjectReference Include="..\_3.DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
   </ItemGroup>
 
 </Project>
