--- a/_4.InfrastructureLayer/_4.InfrastructureLayer.csproj
+++ b/_4.InfrastructureLayer/_4.InfrastructureLayer.csproj
@@ -12,6 +12,8 @@
     <ProjectReference Include="..\#IntegrationLayer\_#IntegrationLayer.csproj" />
     <ProjectReference Include="..\5.DataAccessLayer(DAL)\_5.DataAccessLayer(DAL).csproj" />
     <ProjectReference Include="..\DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
+    <ProjectReference Include="..\_3.DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
+    <ProjectReference Include="..\_5.DataAccessLayer(DAL)\_5.DataAccessLayer(DAL).csproj" />
   </ItemGroup>
 
 </Project>
