--- a/_2.ApplicationLayer(ServiceLayer)/_2.ApplicationLayer(ServiceLayer).csproj
+++ b/_2.ApplicationLayer(ServiceLayer)/_2.ApplicationLayer(ServiceLayer).csproj
@@ -7,12 +7,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\##Cross-cutting Concerns\_##Cross-cutting Concerns.csproj" />
-    <ProjectReference Include="..\#SecurityLayer\_#SecurityLayer.csproj" />
-    <ProjectReference Include="..\DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
-    <ProjectReference Include="..\SecurityLayer\_#SecurityLayer.csproj" />
-    <ProjectReference Include="..\_3.DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\##Cross-cutting Concerns\_##Cross-cutting Concerns.csproj" />
+		<ProjectReference Include="..\#SecurityLayer\_#SecurityLayer.csproj" />
+		<ProjectReference Include="..\DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
+		<ProjectReference Include="..\_5.DataAccessLayer(DAL)\_5.DataAccessLayer(DAL).csproj" />
+	</ItemGroup>
+
 
 </Project>
