--- a/_5.DataAccessLayer(DAL)/_5.DataAccessLayer(DAL).csproj
+++ b/_5.DataAccessLayer(DAL)/_5.DataAccessLayer(DAL).csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\#SecurityLayer\_#SecurityLayer.csproj" />
     <ProjectReference Include="..\DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
     <ProjectReference Include="..\_3.DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
   </ItemGroup>
