Online/Offline management + Memberscards added

--- a/_1.Presentation/_1.PresentationLayer.csproj
+++ b/_1.Presentation/_1.PresentationLayer.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\ConfigurationLayer\_0.ConfigurationLayer.csproj" />
     <ProjectReference Include="..\_0.ConfigurationLayer\_0.ConfigurationLayer.csproj" />
     <ProjectReference Include="..\_2.ApplicationLayer(ServiceLayer)\_2.ApplicationLayer(ServiceLayer).csproj" />
+    <ProjectReference Include="..\_4.InfrastructureLayer\_4.InfrastructureLayer.csproj" />
     <ProjectReference Include="..\_5.DataAccessLayer(DAL)\_5.DataAccessLayer(DAL).csproj" />
 	
   </ItemGroup>
