--- a/_2.ApplicationLayer(ServiceLayer)/_2.ApplicationLayer(ServiceLayer).csproj
+++ b/_2.ApplicationLayer(ServiceLayer)/_2.ApplicationLayer(ServiceLayer).csproj
@@ -16,6 +16,7 @@
 		<ProjectReference Include="..\##Cross-cutting Concerns\_##Cross-cutting Concerns.csproj" />
 		<ProjectReference Include="..\#SecurityLayer\_#SecurityLayer.csproj" />
 		<ProjectReference Include="..\DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
+		<ProjectReference Include="..\_3.DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
 		<ProjectReference Include="..\_5.DataAccessLayer(DAL)\_5.DataAccessLayer(DAL).csproj" />
 	</ItemGroup>
 
