--- a/_2.ApplicationLayer(ServiceLayer)/_2.ApplicationLayer(ServiceLayer).csproj
+++ b/_2.ApplicationLayer(ServiceLayer)/_2.ApplicationLayer(ServiceLayer).csproj
@@ -17,7 +17,7 @@
 		<ProjectReference Include="..\#SecurityLayer\_#SecurityLayer.csproj" />
 		<ProjectReference Include="..\DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
 		<ProjectReference Include="..\_3.DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
-		<ProjectReference Include="..\_5.DataAccessLayer(DAL)\_5.DataAccessLayer(DAL).csproj" />
+		<ProjectReference Include="..\_4.InfrastructureLayer\_4.InfrastructureLayer.csproj" />
 	</ItemGroup>
 
 
