--- a/_0.ConfigurationLayer/appsettings.json
+++ b/_0.ConfigurationLayer/appsettings.json
@@ -8,5 +8,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Authentication": {
+    "Google": {
+      "ClientId": "371603442602-j5rtb26iq6ggls2uk3udtnfjv6pq9r8q.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    },
+    "GitHub": {
+      "ClientId": "Ov23limTD84d9FW6ZpeO",
+      "ClientSecret": "6b10f83a32491657a13f84ac95d6787fd4c164c8"
+    },
+    "Facebook": {
+      "AppId": "709917631696595",
+      "AppSecret": "f1b3cbba2d8661554a0e508adc2bcfce"
+    }
+  }
 }
