--- a/_5.DataAccessLayer(DAL)/_5.DataAccessLayer(DAL).csproj
+++ b/_5.DataAccessLayer(DAL)/_5.DataAccessLayer(DAL).csproj
@@ -8,9 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\#SecurityLayer\_#SecurityLayer.csproj" />
-    <ProjectReference Include="..\DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
-    <ProjectReference Include="..\_3.DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\#SecurityLayer\_#SecurityLayer.csproj" />
+		<ProjectReference Include="..\_3.DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
+	</ItemGroup>
+
 
 </Project>
