--- a/#IntegrationLayer/_#IntegrationLayer.csproj
+++ b/#IntegrationLayer/_#IntegrationLayer.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\##Cross-cutting Concerns\_##Cross-cutting Concerns.csproj" />
     <ProjectReference Include="..\#SecurityLayer\_#SecurityLayer.csproj" />
     <ProjectReference Include="..\DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
