--- a/##Background Jobs/BackgroundJobs.csproj
+++ b/##Background Jobs/BackgroundJobs.csproj
@@ -2,14 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>__Background_Jobs</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
+	  <RootNamespace>BackgroundJobs</RootNamespace>
+	  <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\##Cross-cutting Concerns\_##Cross-cutting Concerns.csproj" />
-    <ProjectReference Include="..\4.infrastructureLayer\_4.InfrastructureLayer.csproj" />
     <ProjectReference Include="..\DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
     <ProjectReference Include="..\_3.DomainLayer(BusinessLogicLayer)\_3.DomainLayer(BusinessLogicLayer).csproj" />
     <ProjectReference Include="..\_4.InfrastructureLayer\_4.InfrastructureLayer.csproj" />
