--- a/_1.Presentation/_1.PresentationLayer.csproj
+++ b/_1.Presentation/_1.PresentationLayer.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\##Background Jobs\BackgroundJobs.csproj" />
 		<ProjectReference Include="..\##Cross-cutting Concerns\_##Cross-cutting Concerns.csproj" />
 		<ProjectReference Include="..\_0.ConfigurationLayer\_0.ConfigurationLayer.csproj" />
 		<ProjectReference Include="..\_2.ApplicationLayer(ServiceLayer)\_2.ApplicationLayer(ServiceLayer).csproj" />
