--- a/_2.ApplicationLayer(ServiceLayer)/_2.ApplicationLayer(ServiceLayer).csproj
+++ b/_2.ApplicationLayer(ServiceLayer)/_2.ApplicationLayer(ServiceLayer).csproj
@@ -16,5 +16,9 @@
 		<ProjectReference Include="..\_4.InfrastructureLayer\_4.InfrastructureLayer.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="ChattManagment\Interface\" />
+	</ItemGroup>
+
 
 </Project>
